k8s/gateway/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: amerbank
spec:
  selector:
    app: gateway


  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080


  type: ClusterIP
