k8s/gateway/ingress.yaml

apiVersion: networking.k8s.io/v1


kind: Ingress

metadata:

  name: api-gateway-ingress
  namespace: amerbank

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

    -  http:
        paths:

          - path: /


            pathType: Prefix

            backend:
              service:

                name: gateway

                port:

                  number: 8080
